# tinytorch

./: Cargo.toml  README.md
src/: activations.rs  lib.rs  macros.rs  reductions.rs  tensor.rs
src/activations/: activation.rs  activations.rs  mod.rs
src/layers/: linear.rs  mlp.rs  mod.rs
src/losses/: binary_cross_entropy.rs  cross_entropy.rs  mod.rs  mse.rs
src/nn/: dropout.rs  layer.rs  linear.rs  mlp.rs  mod.rs  sequential.rs
src/ops/: backward.rs  mod.rs
src/tensor/: init.rs  mod.rs  reductions.rs  tensor.rs
src/tests/: activations_test.rs  layers_linear_test.rs  layers_losses_test.rs  layers_mlp_test.rs  mod.rs  nn_linear_test.rs  tensor_tests.rs
src/tests/nn_tests/: linear_test.rs  losses_test.rs  mlp_test.rs  mod.rs  sequential_test.rs
